--- a/BibleReader/src/i18n/Messages_hu.properties
+++ b/BibleReader/src/i18n/Messages_hu.properties
@@ -64,7 +64,7 @@ I_JOHN=I. János
 II_JOHN=II. János
 III_JOHN=III. János
 JUDE=Júdás
-REVELATION_OF_JOHN=Jelenések
+REVELATION=Jelenések
 
 OldTestament=Ószövetség
 NewTestament=Újszövetség
