--- a/BibleReader/src/i18n/Messages_en.properties
+++ b/BibleReader/src/i18n/Messages_en.properties
@@ -64,7 +64,7 @@ I_JOHN=I. John
 II_JOHN=II. John
 III_JOHN=III. John
 JUDE=Jude
-REVELATION_OF_JOHN=Revelation of John
+REVELATION=Revelation
 
 OldTestament=Old Testament
 NewTestament=New Testament
