--- a/BibleReader/src/i18n/Messages_hu.properties
+++ b/BibleReader/src/i18n/Messages_hu.properties
@@ -68,3 +68,6 @@ REVELATION=Jelenések
 
 OldTestament=Ószövetség
 NewTestament=Újszövetség
+
+Bible_Study_Application=Biblia Tanulmányozó Alkalmazás
+Books=Könyvek
