--- a/BibleReader/src/i18n/Messages_en.properties
+++ b/BibleReader/src/i18n/Messages_en.properties
@@ -68,3 +68,6 @@ REVELATION=Revelation
 
 OldTestament=Old Testament
 NewTestament=New Testament
+
+Bible_Study_Application=Bible Study Application
+Books=Books
