history part created

--- a/Bible/BibleReader/bundle_en.properties
+++ b/Bible/BibleReader/bundle_en.properties
@@ -1,7 +1,10 @@
-translations=Translations
 previous.chapter=Previous chapter
 next.chapter=Next chapter
 previous.book=Previous book
 next.book=Next book
+
+translations=Translations
 hungarian=Hungarian
 english=English
+
+history=History
