--- a/Bible/BibleReader/bundle_hu.properties
+++ b/Bible/BibleReader/bundle_hu.properties
@@ -1,7 +1,10 @@
-translations=Fordítások
 next.chapter=Következ\u0151 fejezet
 previous.chapter=El\u0151z\u0151 fejezet
 previous.book=El\u0151z\u0151 könyv
 next.book=Következ\u0151 könyv
+
+translations=Fordítások
 hungarian=magyar
 english=angol
+
+history=El\u0151zmények
