new parts created

--- a/Bible/BibleReader/bundle_hu.properties
+++ b/Bible/BibleReader/bundle_hu.properties
@@ -9,3 +9,11 @@ english=angol
 
 history=El\u0151zmények
 clear=Mindet töröl
+
+map=Térkép
+
+bookmark=Könyvjelz\u0151
+
+search=Keresés
+
+statistics=Statisztika
