--- a/Bible/BibleReader/bundle_en.properties
+++ b/Bible/BibleReader/bundle_en.properties
@@ -7,13 +7,12 @@ translations=Translations
 hungarian=Hungarian
 english=English
 
-history=History
 clear=Clear
 
+history=History
 map=Map
-
 bookmark=Bookmark
-
 search=Search
-
 statistics=Statistics
+notes=Notes
+books=Books
