--- a/Bible/BibleReader/bundle_hu.properties
+++ b/Bible/BibleReader/bundle_hu.properties
@@ -7,13 +7,12 @@ translations=Fordítások
 hungarian=magyar
 english=angol
 
-history=El\u0151zmények
 clear=Mindet töröl
 
+history=El\u0151zmények
 map=Térkép
-
 bookmark=Könyvjelz\u0151
-
 search=Keresés
-
 statistics=Statisztika
+notes=Jegyzet
+books=Könyvek
