--- a/Bible/BibleReader/src/com/lory/biblereader/i18n/Messages_hu.properties
+++ b/Bible/BibleReader/src/com/lory/biblereader/i18n/Messages_hu.properties
@@ -69,10 +69,16 @@ REVELATION=Jelenések
 OldTestament=Ószövetség
 NewTestament=Újszövetség
 
-Books=Könyvek
-
 searchTextPlaceholder=Keresés
 
 remove=Töröl
 
 newBookMark=Új könyvjelz\u0151
+
+save=Mentés
+cancel=Mégsem
+
+label=Címke
+verses=Vers (pl. 3,4-6)
+
+withoutLabel=Címke nélküli
