--- a/Bible/BibleReader/src/com/lory/biblereader/i18n/Messages_en.properties
+++ b/Bible/BibleReader/src/com/lory/biblereader/i18n/Messages_en.properties
@@ -69,10 +69,16 @@ REVELATION=Revelation
 OldTestament=Old Testament
 NewTestament=New Testament
 
-Books=Books
-
 searchTextPlaceholder=Search
 
 remove=Remove
 
 newBookMark=New bookmark
+
+save=Save
+cancel=Cancel
+
+label=Label
+verses=Verses (eg. 3,4-6)
+
+withoutLabel=Without label
