change to postgresql

--- a/Bible/BibleReader/src/com/lory/biblereader/i18n/Messages_en.properties
+++ b/Bible/BibleReader/src/com/lory/biblereader/i18n/Messages_en.properties
@@ -1,70 +1,70 @@
-GENESIS=Genesis
-EXODUS=Exodus
-LEVITICUS=Leviticus
-NUMBERS=Numbers
-DEUTERONOMY=Deuteronomy
-JOSHUA=Joshua
-JUDGES=Judges
-RUTH=Ruth
-I_SAMUEL=I. Samuel
-II_SAMUEL=II. Samuel
-I_KINGS=I. Kings
-II_KINGS=II. Kings
-I_CHRONICLES=I. Chronicles
-II_CHRONICLES=II. Chronicles
-EZRA=Ezra
-NEHEMIAH=Nehemiah
-ESTHER=Esther
-JOB=Job
-PSALMS=Psalms
-PROVERBS=Proverbs
-ECCLESIASTES=Ecclesiastes
-SONG_OF_SOLOMON=Song of Solomon
-ISAIAH=Isaiah
-JEREMIAH=Jeremiah
-LAMENTATIONS=Lamentations
-EZEKIEL=Ezekiel
-DANIEL=Daniel
-HOSEA=Hosea
-JOEL=Joel
-AMOS=Amos
-OBADIAH=Obadiah
-JONAH=Jonah
-MICAH=Micah
-NAHUM=Nahum
-HABAKKUK=Habakkuk
-ZEPHANIAH=Zephaniah
-HAGGAI=Haggai
-ZECHARIAH=Zechariah
-MALACHI=Malachi
-
-MATTHEW=Matthew
-MARK=Mark
-LUKE=Luke
-JOHN=John
-ACTS=Acts
-ROMANS=Romans
-I_CORINTHIANS=I. Corinthians
-II_CORINTHIANS=II. Corinthians
-GALATIANS=Galatians
-EPHESIANS=Ephesians
-PHILIPPIANS=Philippians
-COLOSSIANS=Colossians
-I_THESSALONIANS=I. Thessalonians
-II_THESSALONIANS=II. Thessalonians
-I_TIMOTHY=I. Timothy
-II_TIMOTHY=II. Timothy
-TITUS=Titus
-PHILEMON=Philemon
-HEBREWS=Hebrews
-JAMES=James
-I_PETER=I. Peter
-II_PETER=II. Peter
-I_JOHN=I. John
-II_JOHN=II. John
-III_JOHN=III. John
-JUDE=Jude
-REVELATION=Revelation
+Gen=Genesis
+Exod=Exodus
+Lev=Leviticus
+Num=Numbers
+Deut=Deuteronomy
+Josh=Joshua
+Judg=Judges
+Ruth=Ruth
+I_Sam=I. Samuel
+II_Sam=II. Samuel
+I_Kgs=I. Kings
+II_Kgs=II. Kings
+I_Chr=I. Chronicles
+II_Chr=II. Chronicles
+Ezra=Ezra
+Neh=Nehemiah
+Esth=Esther
+Job=Job
+Ps=Psalms
+Prov=Proverbs
+Eccl=Ecclesiastes
+Song=Song of Solomon
+Isa=Isaiah
+Jer=Jeremiah
+Lam=Lamentations
+Ezek=Ezekiel
+Dan=Daniel
+Hos=Hosea
+Joel=Joel
+Amos=Amos
+Obad=Obadiah
+Jonah=Jonah
+Mic=Micah
+Nah=Nahum
+Hab=Habakkuk
+Zeph=Zephaniah
+Hag=Haggai
+Zech=Zechariah
+Mal=Malachi 
+	 
+Matt=Matthew
+Mark=Mark
+Luke=Luke
+John=John
+Acts=Acts
+Rom=Romans
+I_Cor=I. Corinthians
+II_Cor=II. Corinthians
+Gal=Galatians
+Eph=Ephesians
+Phil=Philippians
+Col=Colossians
+I_Thess=I. Thessalonians
+II_Thess=II. Thessalonians
+I_Tim=I. Timothy
+II_Tim=II. Timothy
+Titus=Titus
+Phlm=Philemon
+Heb=Hebrews
+Jas=James
+I_Pet=I. Peter
+II_Pet=II. Peter
+I_John=I. John
+II_John=II. John
+III_John=III. John
+Jude=Jude
+Rev=Revelation
 
 OldTestament=Old Testament
 NewTestament=New Testament
