--- a/Bible/BibleReader/src/com/lory/biblereader/i18n/Messages_hu.properties
+++ b/Bible/BibleReader/src/com/lory/biblereader/i18n/Messages_hu.properties
@@ -1,70 +1,70 @@
-GENESIS=I. Mózes
-EXODUS=II. Mózes
-LEVITICUS=III. Mózes
-NUMBERS=IV. Mózes
-DEUTERONOMY=V. Mózes
-JOSHUA=Józsué
-JUDGES=Bírák
-RUTH=Ruth
-I_SAMUEL=I. Sámuel
-II_SAMUEL=II. Sámuel
-I_KINGS=I. Királyok
-II_KINGS=II. Királyok
-I_CHRONICLES=I. Krónikák
-II_CHRONICLES=II. Krónikák
-EZRA=Ezsdrás
-NEHEMIAH=Nehémiás
-ESTHER=Eszter
-JOB=Jób
-PSALMS=Zsoltárok
-PROVERBS=Példabeszédek
-ECCLESIASTES=Prédikátor
-SONG_OF_SOLOMON=Énekek Éneke
-ISAIAH=Ézsaiás
-JEREMIAH=Jeremiás
-LAMENTATIONS=Jeremiás Siralmai
-EZEKIEL=Ezékiel
-DANIEL=Dániel
-HOSEA=Hóseás
-JOEL=Jóel
-AMOS=Ámósz
-OBADIAH=Abdiás
-JONAH=Jónás
-MICAH=Mikeás
-NAHUM=Náhum
-HABAKKUK=Habakuk
-ZEPHANIAH=Zofóniás
-HAGGAI=Haggeus
-ZECHARIAH=Zakariás
-MALACHI=Malakiás
+Gen=I. Mózes
+Exod=II. Mózes
+Lev=III. Mózes
+Num=IV. Mózes
+Deut=V. Mózes
+Josh=Józsué
+Judg=Bírák
+Ruth=Ruth
+I_Sam=I. Sámuel
+II_Sam=II. Sámuel
+I_Kgs=I. Királyok
+II_Kgs=II. Királyok
+I_Chr=I. Krónikák
+II_Chr=II. Krónikák
+Ezra=Ezsdrás
+Neh=Nehémiás
+Esth=Eszter
+Job=Jób
+Ps=Zsoltárok
+Prov=Példabeszédek
+Eccl=Prédikátor
+Song=Énekek Éneke
+Isa=Ézsaiás
+Jer=Jeremiás
+Lam=Jeremiás Siralmai
+Ezek=Ezékiel
+Dan=Dániel
+Hos=Hóseás
+Joel=Jóel
+Amos=Ámósz
+Obad=Abdiás
+Jonah=Jónás
+Mic=Mikeás
+Nah=Náhum
+Hab=Habakuk
+Zeph=Zofóniás
+Hag=Haggeus
+Zech=Zakariás
+Mal=Malakiás
 
-MATTHEW=Máté
-MARK=Márk
-LUKE=Lukács
-JOHN=János
-ACTS=Apostolok Cselekedetei
-ROMANS=Róma
-I_CORINTHIANS=I. Korinthus
-II_CORINTHIANS=II. Korinthus
-GALATIANS=Galaták
-EPHESIANS=Efezus
-PHILIPPIANS=Filippi
-COLOSSIANS=Kolossé
-I_THESSALONIANS=I. Tesszalonika
-II_THESSALONIANS=II. Tesszalonika
-I_TIMOTHY=I. Timóteus
-II_TIMOTHY=II. Timóteus
-TITUS=Titusz
-PHILEMON=Filemon
-HEBREWS=Zsidók
-JAMES=Jakab
-I_PETER=I. Péter
-II_PETER=II. Péter
-I_JOHN=I. János
-II_JOHN=II. János
-III_JOHN=III. János
-JUDE=Júdás
-REVELATION=Jelenések
+Matt=Máté
+Mark=Márk
+Luke=Lukács
+John=János
+Acts=Apostolok Cselekedetei
+Rom=Róma
+I_Cor=I. Korinthus
+II_Cor=II. Korinthus
+Gal=Galaták
+Eph=Efezus
+Phil=Filippi
+Col=Kolossé
+I_Thess=I. Tesszalonika
+II_Thess=II. Tesszalonika
+I_Tim=I. Timóteus
+II_Tim=II. Timóteus
+Titus=Titusz
+Phlm=Filemon
+Heb=Zsidók
+Jas=Jakab
+I_Pet=I. Péter
+II_Pet=II. Péter
+I_John=I. János
+II_John=II. János
+III_John=III. János
+Jude=Júdás
+Rev=Jelenések
 
 OldTestament=Ószövetség
 NewTestament=Újszövetség
