--- a/Bible/BibleReader/src/com/lory/biblereader/i18n/Messages_en.properties
+++ b/Bible/BibleReader/src/com/lory/biblereader/i18n/Messages_en.properties
@@ -74,6 +74,8 @@ searchTextPlaceholder=Search
 remove=Remove
 
 newBookMark=New bookmark
+confirm=Please confirm
+sureQuestionForBookMark=Are you sure you want to remove all bookmarks?
 
 save=Save
 cancel=Cancel
@@ -84,3 +86,4 @@ verses=Verses (eg. 3,4-6)
 withoutLabel=Without label
 
 edit=Edit
+change=Change
