--- a/Bible/BibleReader/src/com/lory/biblereader/i18n/Messages_hu.properties
+++ b/Bible/BibleReader/src/com/lory/biblereader/i18n/Messages_hu.properties
@@ -4,7 +4,7 @@ Lev=III. Mózes
 Num=IV. Mózes
 Deut=V. Mózes
 Josh=Józsué
-Judg=Bírák
+Judg=Bí­rák
 Ruth=Ruth
 I_Sam=I. Sámuel
 II_Sam=II. Sámuel
@@ -74,6 +74,8 @@ searchTextPlaceholder=Keresés
 remove=Töröl
 
 newBookMark=Új könyvjelz\u0151
+confirm=Meger\u0151sítés
+sureQuestionForBookMark=Biztos benne, hogy törölni kí­vánja az összes könyvjelz\u0151t?
 
 save=Mentés
 cancel=Mégsem
@@ -81,6 +83,7 @@ cancel=Mégsem
 label=Címke
 verses=Vers (pl. 3,4-6)
 
-withoutLabel=Címke nélküli
+withoutLabel=Cí­mke nélküli
 
 edit=Szerkeszt
+change=Módosít
