--- a/Bible/BibleReader/src/com/lory/biblereader/base/translation/i18n/Messages_hu.properties
+++ b/Bible/BibleReader/src/com/lory/biblereader/base/translation/i18n/Messages_hu.properties
@@ -4,7 +4,7 @@ Lev=III. Mózes
 Num=IV. Mózes
 Deut=V. Mózes
 Josh=Józsué
-Judg=Bí­rák
+Judg=Bírák
 Ruth=Ruth
 I_Sam=I. Sámuel
 II_Sam=II. Sámuel
@@ -75,7 +75,7 @@ remove=Töröl
 
 newBookMark=Új könyvjelz\u0151
 confirm=Meger\u0151sítés
-sureQuestionForBookMark=Biztos benne, hogy törölni kí­vánja az összes könyvjelz\u0151t?
+sureQuestionForBookMark=Biztos benne, hogy törölni kívánja az összes könyvjelz\u0151t?
 
 save=Mentés
 cancel=Mégsem
@@ -83,7 +83,7 @@ cancel=Mégsem
 label=Címke
 verses=Vers (pl. 3,4-6)
 
-withoutLabel=Cí­mke nélküli
+withoutLabel=Címke nélküli
 
 edit=Szerkeszt
 change=Módosít
