--- a/Bible/BibleReader/bundle_hu.properties
+++ b/Bible/BibleReader/bundle_hu.properties
@@ -3,7 +3,7 @@ previous.chapter=El\u0151z\u0151 fejezet
 previous.book=El\u0151z\u0151 könyv
 next.book=Következ\u0151 könyv
 
-translations=Fordí­tások
+translations=Fordítások
 hungarian=magyar
 english=angol
 
@@ -17,4 +17,4 @@ statistics=Statisztika
 notes=Jegyzet
 books=Könyvek
 context=context
-compare=Összehasonlí­t
+compare=Összehasonlít
